src/test/wacc/integration/integrationTest.properties
# Valid test directories
valid.dirs=IO,advanced,array,expressions,function,if,pairs,runtimeErr,scope,sequence,variables
valid.base.path=src/test/wacc/examples/valid

# Enable/disable specific valid directories (true/false)
valid.IO.enabled=false
valid.advanced.enabled=false
valid.array.enabled=false
valid.expressions.enabled=false
valid.function.enabled=false
valid.if.enabled=false
valid.pairs.enabled=false
valid.runtimeErr.enabled=false
valid.scope.enabled=false
valid.sequence.enabled=false
valid.variables.enabled=false

# Invalid test directories 
invalid.dirs=semanticErr,syntaxErr,whack
invalid.base.path=src/test/wacc/examples/invalid

# Enable/disable specific invalid directories (true/false)
invalid.semanticErr.enabled=false
invalid.syntaxErr.enabled=false
invalid.whack.enabled=false

# Test file extension
test.file.extension=.wacc

# Expected exit codes
exit.code.success=0
exit.code.syntax_error=100  
exit.code.semantic_error=200
exit.code.runtime_error=255

# Output markers
output.runtime_error=#runtime_error#
output.syntax_error=#syntax_error# 
output.semantic_error=#semantic_error#